hierarchical-format/config/namespaces/team-2/network-policy-default-deny-all.yaml

# Copyright 2021 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

# [START anthos_config_management_namespaces_team_2_networkpolicy_default_deny_all]
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-all
  namespace: team-2
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
# [END anthos_config_management_namespaces_team_2_networkpolicy_default_deny_all]
---
